@@ -31,6 +31,7 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
     dpkg-deb getting everything but the extension correct
     (see #575059, #452273 for why it does not produce the
      correct extesion).  (Closes: #516721, #677353)
+  * Dh_Lib.pm: Drop now unused "udeb_filename" subroutine.
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
